--- a/force-app/main/default/classes/ResourceTriggerHandler.cls
+++ b/force-app/main/default/classes/ResourceTriggerHandler.cls
@@ -7,22 +7,22 @@ public with sharing class ResourceTriggerHandler extends TriggerHandler {
     public override void beforeInsert(List<SObject> newList) {
         ArticleService articleService = (ArticleService) ClassFactory.newInstance(ArticleService.class);
         articleService.addDefaultImage(newList);
-        articleService.calculateExpirationDateBeforeInsert(newList);
+        articleService.calculateExpirationDate(newList);
     }
 
     public override void beforeUpdate(List<SObject> newList, Map<Id, SObject> oldMap) {
         ArticleService articleService = (ArticleService) ClassFactory.newInstance(ArticleService.class);
         articleService.addDefaultImage(newList);
-        articleService.calculateExpirationDateBeforeUpdate(newList, (Map<Id, Resource__c>) oldMap);
+        articleService.calculateExpirationDate(newList, (Map<Id, Resource__c>) oldMap);
     }
 
     public override void afterInsert(List<SObject> newList) {
         ArticleService articleService = (ArticleService) ClassFactory.newInstance(ArticleService.class);
-        articleService.processTherapeuticAreasAfterInsert(newList);
+        articleService.processTherapeuticAreas(newList);
     }
 
     public override void afterUpdate(List<SObject> newList, Map<Id, SObject> oldMap) {
         ArticleService articleService = (ArticleService) ClassFactory.newInstance(ArticleService.class);
-        articleService.processTherapeuticAreasAfterUpdate(newList, (Map<Id, Resource__c>) oldMap);
+        articleService.processTherapeuticAreas(newList, (Map<Id, Resource__c>) oldMap);
     }
 }
