--- a/force-app/main/default/classes/PETriggerHandler.cls
+++ b/force-app/main/default/classes/PETriggerHandler.cls
@@ -4,7 +4,7 @@
 public with sharing class PETriggerHandler  extends TriggerHandler {
 
     protected override void onAfterUpdate(List<SObject> newList, Map<Id, SObject> oldMap) {
-        TherapeuticAreaService.deleteTherapeuticAreaPatientFromPE(newList, (Map<Id, Participant_Enrollment__c>) oldMap);
+        TherapeuticAreaPatientService.deleteTherapeuticAreaPatientFromPE(newList, (Map<Id, Participant_Enrollment__c>) oldMap);
     }
 
 }
