--- a/force-app/main/default/classes/ParticipantStudyEnrollmentTriggerHandler.cls
+++ b/force-app/main/default/classes/ParticipantStudyEnrollmentTriggerHandler.cls
@@ -4,7 +4,7 @@
 public with sharing class ParticipantStudyEnrollmentTriggerHandler extends TriggerHandler {
 
     protected override void onAfterUpdate(List<SObject> newList, Map<Id, SObject> oldMap) {
-        TherapeuticAreaService.deleteTherapeuticAreaPatientFromPSE(newList, (Map<Id, Participant_Study_Enrollment__c>) oldMap);
+        TherapeuticAreaPatientService.deleteTherapeuticAreaPatientFromPSE(newList, (Map<Id, Participant_Study_Enrollment__c>) oldMap);
     }
 
 }
