add delegates logic (PEH-406)

--- a/force-app/main/default/classes/ParticipantService.cls
+++ b/force-app/main/default/classes/ParticipantService.cls
@@ -3,27 +3,29 @@
  */
 
 public class ParticipantService {
-    
+
     public enum ParticipantStates {ALUMNI, PROSPECT, REFERRAL, PARTICIPANT}
-    
+
     public class ParticipantState{
         @AuraEnabled public ParticipantStates value;
         @AuraEnabled public Participant_Enrollment__c pe;
         @AuraEnabled public Participant_Study_Enrollment__c pse;
         @AuraEnabled public Boolean isDelegate;
         @AuraEnabled public Clinical_Trial_Profile__c ctp;
+        @AuraEnabled public Participant__c participant;
 
         public ParticipantState(){
             value = ParticipantStates.PROSPECT;
             isDelegate = false;
         }
     }
-    
+
     public static ParticipantState getParticipantState(){
         ParticipantState state = new ParticipantState();
         List<Participant_Enrollment__c> peList = ParticipantEnrollmentService.getParticipantEnrollmentsForParticipant();
         if(peList.size() >  0) {
             state.pe = peList[0];
+            state.participant = state.pe.Participant__r;
             state.isDelegate = state.pe.Participant__r.Contact__c != CommunityService.getUserContact().Id;
             if(PEStatusState.PE_STATUS_GROUP_FAILED.contains(state.pe.Participant_Status__c)){
                 state.value = ParticipantStates.ALUMNI;
