--- a/force-app/main/default/classes/CommunityService.cls
+++ b/force-app/main/default/classes/CommunityService.cls
@@ -28,10 +28,10 @@ public without sharing class CommunityService {
     public static final String USER_MODE_PARTICIPANT = 'Participant';
     public static final String USER_MODE_DELEGATE = 'Delegate';
 
-	//Exception messages
+    //Exception messages
     public static String ERROR_MISSING_STUDY = 'Unexpected error occurred. Contact administrator.';
-	private static String ERROR_MISSING_CONTACT_ON_USER = 'User Contact can not be NULL';
-	private static String ERROR_MISSING_PARTICIPANT_ON_CONTACT = 'Contact does not have related Participant';
+    private static String ERROR_MISSING_CONTACT_ON_USER = 'User Contact can not be NULL';
+    private static String ERROR_MISSING_PARTICIPANT_ON_CONTACT = 'Contact does not have related Participant';
 
 
     //hold contact instance:
@@ -56,18 +56,20 @@ public without sharing class CommunityService {
         userContact = getContactById(contactId);
     }
 
-    public static String getParticipantId() {
+    public String getParticipantId() {
 
         User currentUser = [SELECT ContactId FROM User WHERE Id = :UserInfo.getUserId()];
         if(currentUser.ContactId == null) {
             throw new CommunityServiceException(CommunityService.ERROR_MISSING_CONTACT_ON_USER);
         }
-
         Contact contact  = [SELECT Id, (SELECT Id FROM Participants__r) FROM Contact WHERE Id = :currentUser.ContactId];
-        if(contact.Participants__r.size() == 0) {
-            throw new CommunityServiceException(CommunityService.ERROR_MISSING_PARTICIPANT_ON_CONTACT);
-        } else {
+        ParticipantService.ParticipantState state = ParticipantService.getParticipantState();
+        if(contact.Participants__r.size() != 0 && !state.isDelegate) {
             return contact.Participants__r[0].Id;
+        } else if (state.isDelegate) {
+            return state.participant.Id;
+        } else {
+            throw new CommunityServiceException(CommunityService.ERROR_MISSING_PARTICIPANT_ON_CONTACT);
         }
     }
 
@@ -84,8 +86,8 @@ public without sharing class CommunityService {
                 SELECT Id, Name, FirstName, LastName, ContactId, Email
                 FROM User
                 WHERE
-                //Profile.Name = :COMMUNITY_USER_PROFILE_NAME AND
-                 ContactId IN :contactIds
+                        //Profile.Name = :COMMUNITY_USER_PROFILE_NAME AND
+                        ContactId IN :contactIds
                 //AND email != null
         ];
     }
