--- a/force-app/main/default/classes/ResourceService.cls
+++ b/force-app/main/default/classes/ResourceService.cls
@@ -242,7 +242,7 @@ public with sharing class ResourceService {
         }
     }
 
-    public class ResourceWrapper {
+    public virtual class ResourceWrapper {
 
         @AuraEnabled
         public Resource__c resource;
