--- a/force-app/main/default/classes/ParticipantService.cls
+++ b/force-app/main/default/classes/ParticipantService.cls
@@ -26,12 +26,14 @@ public class ParticipantService {
         if(peList.size() >  0) {
             state.pe = peList[0];
             state.participant = state.pe.Participant__r;
-            state.isDelegate = state.pe.Participant__r.Contact__c != CommunityService.getUserContact().Id;
+			if(state.pe.Study_Site__r.Clinical_Trial_Profile__c != null) {
+				state.ctp = state.pe.Study_Site__r.Clinical_Trial_Profile__r;
+            }
+			state.isDelegate = state.pe.Participant__r.Contact__c != CommunityService.getUserContact().Id;
             if(PEStatusState.PE_STATUS_GROUP_FAILED.contains(state.pe.Participant_Status__c)){
                 state.value = ParticipantStates.ALUMNI;
             }else if(PEStatusState.PE_STATUS_GROUP_IN_PROGRESS.contains(state.pe.Participant_Status__c)){
                 state.value = ParticipantStates.REFERRAL;
-                state.ctp = state.pe.Study_Site__r.Clinical_Trial_Profile__r;
 
             }else if(state.pe.Participant_Status__c == PEStatusState.PE_STATUS_ENROLLMENT_SUCCESS){
                 state.value = ParticipantStates.PARTICIPANT;
@@ -39,7 +41,6 @@ public class ParticipantService {
                 if(pseList.size() > 0) {
                     state.pse = pseList[0];
                     state.isDelegate = state.pse.Participant__r.Contact__c != CommunityService.getUserContact().Id;
-                    state.ctp = state.pse.Clinical_Trial_Profile__r;
                     if(PSEService.PSE_STATUS_GROUP_COMPLETE.contains(state.pse.Status__c)){
                         state.value = ParticipantStates.ALUMNI;
                     }
